# saber-public

./: CMakeLists.txt
cmake/: compiler_flags_Intel_Fortran.cmake
quench/src/: CMakeLists.txt  Covariance.h  Fields.cc  Fields.h  Geometry.cc  Geometry.h  Increment.cc  Increment.h  Interpolation.cc  Interpolation.h  LinearVariableChangeParameters.h  State.cc  VariableChange.cc  VariableChangeParameters.h
src/saber/: CMakeLists.txt
src/saber/blocks/: SaberCentralBlockBase.h  SaberEnsembleBlockChain.h  SaberOuterBlockBase.cc  SaberParametricBlockChain.cc  SaberParametricBlockChain.h
src/saber/bump/: BUMPParameters.h  tools_atlas.fypp  type_cmat.fypp  type_geom.fypp  type_nam.fypp  type_nicas.fypp  type_nicas_blk.fypp  type_nicas_cmp.fypp  type_var.fypp
src/saber/diffusion/: Diffusion.cc  Diffusion.h
src/saber/generic/: WriteFields.cc  WriteFields.h
src/saber/mgbf/: CMakeLists.txt
src/saber/mgbf/covariance/: 1  Convariance.h.org  Grid.cc  Grid.h  MGBF_Covariance.cc  MGBF_Covariance.h  MGBF_Covariance.interface.F90  MGBF_Covariance.interface.h  dd  dd.h  mgbf_Grid.cc  mgbf_Grid.h  mgbf_Interpolation.cc  mgbf_Interpolation.h  mgbf_covariance_mod.f90
src/saber/mgbf/mgbf_lib/: CMakeLists.txt  RBETA_TEST.f90  bak_type_bump.F90  jp_pbfil.f90  k.f90  mg_bocos.f90  mg_domain.f90  mg_domain_loc.f90  mg_entrymod.f90  mg_filtering.f90  mg_generations.f90  mg_interpolate.f90  mg_intstate.f90  mg_mppstuff.f90  mg_parameter.f90  mg_timers.f90  mg_transfer.f90  mgbf_kind.f90  type_mg_domain.f90  type_mg_entrymod.f90  type_mg_interpolate.f90  type_mg_intstate.f90  type_mg_mppstuff.f90  type_mg_parameter.f90  type_mg_transfer.f90  type_mgbf.f90
src/saber/oops/: ErrorCovariance.h  ErrorCovarianceToolbox.h  Localization.h  ProcessPerts.h  Utilities.h
src/saber/spectralb/: CovarianceStatisticsUtils.cc  HydrostaticPressure.cc  HydrostaticPressure.h  HydrostaticPressurem1.cc  SpectralCovariance.cc  spectralbParameters.h
src/saber/vader/: CMakeLists.txt  DryAirDensity.cc  DryAirDensityFromExnerm1.cc  DryAirDensityFromExnerm1.h  GpToHp.cc  GpToHpm1.cc  HpHexnerToPExner.cc  HpToHexner.cc  Hpm1ToHexnerExnerm1.cc  Hpm1ToHexnerExnerm1.h  HydroBal.cc  HydroBal.h  HydroBalm1.cc  HydroBalm1.h  MoistureControl.cc  PressureParameters.h
test/testdata/: gauss_state.nc
test/testdeps/: error_covariance_training_spectralb_3.txt
test/testinput/: compare_diagnostics_spectralb_from_saber_file_1.yaml  convertstate_constant.yaml  dirac_fastlam_1.yaml  dirac_spectralb.yaml  dirac_spectralb_and_touv.yaml  dirac_spectralb_duplicate_variables.yaml  dirac_spectralb_from_CS.yaml  dirac_spectralb_from_saber_file_1.yaml  dirac_spectralb_from_saber_file_2.yaml  dirac_spectralb_from_saber_file_3.yaml  dirac_spectralb_from_saber_file_4.yaml  dirac_spectralb_gauss_vader_1.yaml  dirac_spectralb_gauss_vader_2.yaml  dirac_spectralb_gauss_vader_3.yaml  dirac_spectralb_gauss_vader_4.yaml  dirac_spectralb_gauss_vader_6.yaml  dirac_sqrtspectralb.yaml  dirac_sqrtspectralb_correl_1.yaml  dirac_vertproj.yaml  dirac_write_fields.yaml  error_covariance_training_bump_hdiag-nicas_2.yaml  error_covariance_training_bump_nicas_11.yaml  error_covariance_training_bump_nicas_8.yaml  error_covariance_training_doc_10.yaml  error_covariance_training_spectralb_1.yaml  error_covariance_training_spectralb_2.yaml  error_covariance_training_spectralb_3.yaml  error_covariance_training_spectralb_mio.yaml  process_perts_from_csdual_states_1.yaml  process_perts_from_gauss_perts_1.yaml  process_perts_from_gauss_perts_2.yaml  randomization_csdual_sqrtspectralb.yaml  randomization_sqrtspectralb_1.yaml  randomization_sqrtspectralb_2.yaml  randomization_sqrtspectralb_3.yaml  randomization_sqrtspectralb_4.yaml
test/testlist/: saber_test_tier1-fastlam-fftw.txt  saber_test_tier1-spectralb.txt  saber_test_tier1.txt
test/testref/: convertstate_constant.ref  convertstate_lam.ref  dirac_bump_1.ref  dirac_bump_2.ref  dirac_bump_3.ref  dirac_bump_4.ref  dirac_bump_5.ref  dirac_bump_6.ref  dirac_bump_7.ref  dirac_bump_8.ref  dirac_bump_9.ref  dirac_diffusion_1.ref  dirac_diffusion_2.ref  dirac_duplicate_variables.ref  dirac_ens_both_geom.ref  dirac_ens_model_geom.ref  dirac_ens_noloc_4d.ref  dirac_ens_other_geom_1.ref  dirac_ens_other_geom_2.ref  dirac_fastlam-fftw_1.ref  dirac_fastlam-fftw_2.ref  dirac_fastlam_1.ref  dirac_fastlam_10.ref  dirac_fastlam_2.ref  dirac_fastlam_3.ref  dirac_fastlam_4.ref  dirac_fastlam_5.ref  dirac_fastlam_6.ref  dirac_fastlam_7.ref  dirac_fastlam_8.ref  dirac_fastlam_9.ref  dirac_gaussuvtogp.ref  dirac_gsi_geos_global.ref  dirac_gsi_geos_global_opt_1.ref  dirac_gsi_geos_global_opt_2.ref  dirac_gsi_geos_global_opt_3.ref  dirac_gsi_gfs_global.ref  dirac_id.ref  dirac_id_4d.ref  dirac_id_4d_timecov.ref  (+69 more)
(+4 files in other folders)
